--- a/Doan/Doan.csproj
+++ b/Doan/Doan.csproj
@@ -127,10 +127,14 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoaiSanPhamController.cs" />
+    <Compile Include="Controllers\NhaSanXuatController.cs" />
     <Compile Include="Controllers\ShopController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BUS\LoaiSanPhamBUS.cs" />
+    <Compile Include="Models\BUS\NhaSanXuatBUS.cs" />
     <Compile Include="Models\BUS\ShopOnlineBus.cs" />
     <Compile Include="Models\Generated\Database.cs">
       <AutoGen>True</AutoGen>
@@ -151,6 +155,8 @@
     <Content Include="Asset\fonts\fontawesome-webfont.svg" />
     <Content Include="Asset\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Asset\images\404\404.png" />
+    <Content Include="Asset\images\Banner\banner1.png" />
+    <Content Include="Asset\images\Banner\banner2.png" />
     <Content Include="Asset\images\blog\blog-one.jpg" />
     <Content Include="Asset\images\blog\blog-three.jpg" />
     <Content Include="Asset\images\blog\blog-two.jpg" />
@@ -272,6 +278,12 @@
     <Content Include="Views\Shared\_MainLayout.cshtml" />
     <Content Include="Views\Shop\Index.cshtml" />
     <Content Include="Views\Shop\Details.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Views\Shared\_Header.cshtml" />
+    <Content Include="Views\Shared\_NhaSanXuat.cshtml" />
+    <Content Include="Views\NhaSanXuat\Index.cshtml" />
+    <Content Include="Views\LoaiSanPham\Index.cshtml" />
+    <Content Include="Views\Shared\_LoaiSanPham.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
